--- a/src/app/get-all/get-all.component.html
+++ b/src/app/get-all/get-all.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-    <div class="row">
-            <div class="card col-3" *ngFor="let e of data">
+<div class="container p-5 mt-3">
+    <div class="row p-2">
+            <div class="card border shadow shadow-lg col-4" *ngFor="let e of data">
                 <img src="{{e.image}}" class="m-1 border rounded-pill border-2" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">{{e.name}}</h5>
