--- a/src/app/insert/insert.component.html
+++ b/src/app/insert/insert.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="myForm" class="form-horizontal m-5 border border-3 rounded shadow shadow-lg p-3 col-6 justify-content-center" (ngSubmit)="insert()">
-    <input type="text" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "id">
+    <input type="text" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "id" pattern="[0-9]">
     <br>
     <input type="text" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "name">
     <br>
     <input type="text" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "image">
     <br>
-    <input type="text" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "email">
+    <input type="email" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "email">
     <br>
     <input type="text" class="w-100 p-2 m-2 border rounded-pill border-warning" formControlName = "phone">
     <br>
